--- a/index.html
+++ b/index.html
@@ -12,19 +12,15 @@
 
       <video poster="images/poster.png" playsinline autoplay muted loop>
         <source src="videos/teaser.mp4" type="video/mp4">
-        <!-- Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>. -->
+        Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
       </video>
 
       <div class="social">
-        <!-- <a class="tumb" href="#" title="Tumblr"><img src="images/tumb.png"></a>
-        <a class="insta" href="#" title="Instagram"><img src="images/insta.png"></a>
-        <a class="twit" href="#" title="Twitter"><img src="images/twit.png"></a>
-        <a class="fb" href="#" title="Facebook"><img src="images/fb.png"></a> -->
         <div class="social-wrap">
-          <a class="tumb" href="#" title="Tumblr">Tumblr</a>
-          <a class="insta" href="#" title="Instagram">Instagram</a>
-          <a class="twit" href="#" title="Twitter">Twitter</a>
-          <a class="fb" href="#" title="Facebook">Facebook</a>
+          <a class="tumb" href="#" target="_blank" title="Tumblr">Tumblr</a>
+          <a class="insta" href="#" target="_blank" title="Instagram">Instagram</a>
+          <a class="twit" href="#" target="_blank" title="Twitter">Twitter</a>
+          <a class="fb" href="#" target="_blank" title="Facebook">Facebook</a>
         </div>
       </div>
 
