social links added

--- a/index.html
+++ b/index.html
@@ -12,29 +12,25 @@
 
       <video poster="images/poster.png" playsinline autoplay muted loop>
         <source src="videos/teaser.mp4" type="video/mp4">
-        <!-- Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>. -->
+        Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
       </video>
 
       <div class="social">
-        <!-- <a class="tumb" href="#" title="Tumblr"><img src="images/tumb.png"></a>
-        <a class="insta" href="#" title="Instagram"><img src="images/insta.png"></a>
-        <a class="twit" href="#" title="Twitter"><img src="images/twit.png"></a>
-        <a class="fb" href="#" title="Facebook"><img src="images/fb.png"></a> -->
         <div class="social-wrap">
-          <a class="tumb" href="#" title="Tumblr">Tumblr</a>
-          <a class="insta" href="#" title="Instagram">Instagram</a>
-          <a class="twit" href="#" title="Twitter">Twitter</a>
-          <a class="fb" href="#" title="Facebook">Facebook</a>
+          <a class="tumb" href="http://nichigames.tumblr.com/" target="_blank" title="Tumblr">Tumblr</a>
+          <a class="insta" href="https://www.instagram.com/nichisocial/" target="_blank" title="Instagram">Instagram</a>
+          <a class="twit" href="https://twitter.com/NichiNews" target="_blank" title="Twitter">Twitter</a>
+          <a class="fb" href="https://facebook.com/groups/nichivillage" target="_blank" title="Facebook">Facebook</a>
         </div>
       </div>
 
       <div class="nav">
         <h1>The Alternates</h1>
-        <a href="#">T. B. A.</a>
+        <a href="#">t b a</a>
         </br>
-        <a href="#">T. B. A.</a>
+        <a href="#">t b a</a>
         </br></br></br>
-        <a href="#">ABOUT</a>
+        <a href="#">about</a>
       </div>
 
     </div>
