--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="nav">
-        <h1>The Alternates</h1>
+        <a href="#" id="alternates">The Alternates</a>
         <a href="#">tba</a>
         </br>
         <a href="#">tba</a>
