--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       </div>
 
       <div class="nav">
-        <a href="#" id="alternates">The Alternates</a>
+        <a id="alternates" href="#">The Alternates</a>
+        </br>
         <a href="#">tba</a>
         </br>
         <a href="#">tba</a>
