--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class= "main">
 
       <video poster="images/poster.png" playsinline autoplay muted loop>
-        <source src="videos/teaser.mp4" type="video/mp4">
+        <source src="videos/TA-WIP.mp4" type="video/mp4">
         Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
       </video>
 
